--- a/react.portfolio/src/App.css
+++ b/react.portfolio/src/App.css
@@ -1,38 +1,16 @@
-.App {
-  text-align: center;
-}
+/*navbar Start #ffc4d6
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+font-family: 'IBM Plex Mono', monospace;
+font-family: 'Libre Baskerville', serif;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto', sans-serif;
+font-family: 'Roboto Slab', serif;*/
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-link {
+  font-weight: 500;
+  cursor: pointer;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav-link:hover {
+  transform: scale(1.3);
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*navbar ends*/
